creazione form di registrazione, e la classe model RegisterPayload per gestire i dati in input

--- a/jobseek/src/main/resources/templates/frontend/jobseekfe/src/app/auth/register/register.component.html
+++ b/jobseek/src/main/resources/templates/frontend/jobseekfe/src/app/auth/register/register.component.html
@@ -1,21 +1,29 @@
 <div class="container justify-content-center">
-    <form class="form-signin" >
+    <form class="form-signin" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <h1 class="">Please register</h1>
         <div class="form-group">
+            <label for="inputName" class="sr-only">Name</label>
+            <input type="text" id="inputName" class="form-control" placeholder="name" [formControlName]="'name'">
+        </div>
+        <div class="form-group">
+            <label for="inputSurname" class="sr-only">Surname</label>
+            <input type="text" id="inputSurname" class="form-control" placeholder="surname" [formControlName]="'surname'">
+        </div>
+        <div class="form-group">
             <label for="inputUsername" class="sr-only">Username</label>
-            <input type="text" id="inputUsername" class="form-control" placeholder="Username">
+            <input type="text" id="inputUsername" class="form-control" placeholder="Username" [formControlName]="'username'">
         </div>
         <div class="form-group">
             <label for="inputEmail" class="sr-only">Email</label>
-            <input type="text" id="inputEmail" class="form-control" placeholder="Email">
+            <input type="text" id="inputEmail" class="form-control" placeholder="Email" [formControlName]="'email'">
         </div>
         <div class="form-group">
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="text" id="inputPassword" class="form-control" placeholder="Password">
+            <input type="text" id="inputPassword" class="form-control" placeholder="Password" [formControlName]="'password'">
         </div>
         <div class="form-group">
             <label for="inputConfirmPassword" class="sr-only">Password</label>
-            <input type="text" id="inputConfirmPassword" class="form-control" placeholder="Confirm Password">
+            <input type="text" id="inputConfirmPassword" class="form-control" placeholder="Confirm Password" [formControlName]="'confirmPassword'">
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
     </form>
